wip: draft landing package
- mockup in index.html and styles in styles.css

--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1",
+    "typeface-roboto": "^1.1.13"
   }
 }
